--- a/pets.html
+++ b/pets.html
@@ -14,22 +14,22 @@
     <header>
         <h1>My pets</h1>
         <nav>
-            <a class="petslink" href="/portfolio/index.html">Portfolio</a>
+            <a class="petslink" href="index.html">Portfolio</a>
         </nav>
     </header>
 
     <section>
         <articles>
-            <img src="/portfolio/pets/yellow.png" alt="Yellow Puffle">
+            <img src="/pets/yellow.png" alt="Yellow Puffle">
             <p></p>
         </articles>
 
         <articles>
-            <img src="/portfolio/pets/blue.png" alt="Blue Puffle">
+            <img src="/pets/blue.png" alt="Blue Puffle">
         </articles>
 
         <articles>
-            <img src="/portfolio/pets/red.png" alt="Red Puffle">
+            <img src="/pets/red.png" alt="Red Puffle">
         </articles>
     </section>
 
