--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -16,7 +16,7 @@
             <a class="navlink" href="#about">About</a>
             <a class="navlink" href="#proyects">Proyects</a>
             <a class="navlink" href="#contact">Contact</a>
-            <a class="navlink" href="pets.html">Pets Gallery</a>
+            <a class="navlink" href="/portfolio/pets.html">Pets Gallery</a>
         </nav>
     </header>
 
