--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -9,10 +9,11 @@
     <title>Portfolio</title>
 </head>
 
-<body>
-    <header>
+<body class="portfolio-body">
+    <header class="portfolio-header">
+        <h1>PORTFOLIO</h1>
         <h1>Ulith Giraldo Echavarría</h1>
-        <nav>
+        <nav class="portfolionav">
             <a class="navlink" href="#about">About</a>
             <a class="navlink" href="#proyects">Proyects</a>
             <a class="navlink" href="#contact">Contact</a>
@@ -22,7 +23,7 @@
 
     <section id="about">
         <h2>About me</h2>
-        <p>
+        <p class="about">
             Hi, my name is Ulith and I'm a Riwi coder, I start
             coding since Riwi, in this moment I kwon about Python
             basic and I'm learning HTML and CSS
@@ -33,6 +34,7 @@
         <h2>Proyects</h2>
         <ul class="proyectslist">
             <li>Eco-Bikes</li>
+            <li>Galactic</li>
             <li>WorldHubs</li>
             <li>Mini-OS</li>
         </ul>
