--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -9,29 +9,36 @@
     <title>Pets Gallery</title>
 </head>
 
-<body>
+<body class="pets-body">
 
-    <header>
+    <header class="header">
         <h1>My pets</h1>
-        <nav>
-            <a class="petslink" href="/portfolio/index.html">Portfolio</a>
-        </nav>
     </header>
 
-    <section>
-        <articles>
+    <section class="gallery">
+        <articles class="article1">
             <img src="/portfolio/pets/yellow.png" alt="Yellow Puffle">
             <p></p>
         </articles>
 
-        <articles>
+        <articles class="article2">
             <img src="/portfolio/pets/blue.png" alt="Blue Puffle">
         </articles>
 
-        <articles>
-            <img src="/portfolio/pets/red.png" alt="Red Puffle">
+        <articles class="article3">
+            <img src="/portfolio/pets/dragon.png" alt="Red Puffle">
+        </articles>
+
+        <articles class="article4">
+            <img src="/portfolio/pets/brown.png" alt="Blue Puffle">
+        </articles>
+
+        <articles class="article5">
+            <img src="/portfolio/pets/black.png" alt="Red Puffle">
         </articles>
     </section>
+
+    <section><a class="portfoliolink" href="/portfolio/index.html">Portfolio</a></section>
 
 </body>
 
