pets html and css

--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -11,34 +11,63 @@
 
 <body class="pets-body">
 
-    <header class="header">
+    <header class="pets-header">
         <h1>My pets</h1>
     </header>
 
     <section class="gallery">
-        <articles class="article1">
-            <img src="/portfolio/pets/yellow.png" alt="Yellow Puffle">
-            <p></p>
+        <articles class="img-text">
+            <div class="img-container" id="img1"><img src="/portfolio/pets/yellow.png" alt="Yellow Puffle"></div>
+            <strong>
+                <p>Yellow Puffle</p>
+            </strong>
+            <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
+                others with its fun personality</p>
         </articles>
-
-        <articles class="article2">
-            <img src="/portfolio/pets/blue.png" alt="Blue Puffle">
+        <articles class="img-text">
+            <div class="img-container" id="img2"><img src="/portfolio/pets/blue.png" alt="Blue Puffle"></div>
+            <strong>
+                <p>Blue Puffle</p>
+            </strong>
+            <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
+                others with its fun personality</p>
         </articles>
-
-        <articles class="article3">
-            <img src="/portfolio/pets/dragon.png" alt="Red Puffle">
+        <articles class="img-text">
+            <div class="img-container" id="img3"><img src="/portfolio/pets/dragon.png" alt="Red Puffle"></div>
+            <strong>
+                <p>Dragon Puffle</p>
+            </strong>
+            <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
+                others with its fun personality</p>
         </articles>
-
-        <articles class="article4">
-            <img src="/portfolio/pets/brown.png" alt="Blue Puffle">
+        <articles class="img-text">
+            <div class="img-container" id="img4"><img src="/portfolio/pets/brown.png" alt="Blue Puffle"></div>
+            <strong>
+                <p>Brown Puffle</p>
+            </strong>
+            <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
+                others with its fun personality</p>
         </articles>
-
-        <articles class="article5">
-            <img src="/portfolio/pets/black.png" alt="Red Puffle">
+        <articles class="img-text">
+            <div class="img-container" id="img5"><img src="/portfolio/pets/red.png" alt="Red Puffle"></div>
+            <strong>
+                <p>Red Puffle</p>
+            </strong>
+            <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
+                others with its fun personality</p>
+        </articles>
+        <articles class="img-text">
+            <div class="img-container" id="img6"><img src="/portfolio/pets/green.png" alt="Green Puffle"></div>
+            <strong>
+                <p>Green Puffle</p>
+            </strong>
+            <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
+                others with its fun personality</p>
         </articles>
     </section>
 
-    <section><a class="portfoliolink" href="/portfolio/index.html">Portfolio</a></section>
+    <section class="backlink-container"><a class="portfoliolink" href="/portfolio/index.html">Come back to Portfolio</a>
+    </section>
 
 </body>
 
