--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="">
     <title>Pets Gallery</title>
 </head>
@@ -16,54 +16,55 @@
     </header>
 
     <section class="gallery">
-        <articles class="img-text">
+
+        <article class="img-text">
             <div class="img-container" id="img1"><img src="/portfolio/pets/yellow.png" alt="Yellow Puffle"></div>
             <strong>
                 <p>Yellow Puffle</p>
             </strong>
             <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
                 others with its fun personality</p>
-        </articles>
-        <articles class="img-text">
+        </article>
+        <article class="img-text">
             <div class="img-container" id="img2"><img src="/portfolio/pets/blue.png" alt="Blue Puffle"></div>
             <strong>
                 <p>Blue Puffle</p>
             </strong>
             <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
                 others with its fun personality</p>
-        </articles>
-        <articles class="img-text">
+        </article>
+        <article class="img-text">
             <div class="img-container" id="img3"><img src="/portfolio/pets/dragon.png" alt="Red Puffle"></div>
             <strong>
                 <p>Dragon Puffle</p>
             </strong>
             <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
                 others with its fun personality</p>
-        </articles>
-        <articles class="img-text">
+        </article>
+        <article class="img-text">
             <div class="img-container" id="img4"><img src="/portfolio/pets/brown.png" alt="Blue Puffle"></div>
             <strong>
                 <p>Brown Puffle</p>
             </strong>
             <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
                 others with its fun personality</p>
-        </articles>
-        <articles class="img-text">
+        </article>
+        <article class="img-text">
             <div class="img-container" id="img5"><img src="/portfolio/pets/red.png" alt="Red Puffle"></div>
             <strong>
                 <p>Red Puffle</p>
             </strong>
             <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
                 others with its fun personality</p>
-        </articles>
-        <articles class="img-text">
+        </article>
+        <article class="img-text">
             <div class="img-container" id="img6"><img src="/portfolio/pets/green.png" alt="Green Puffle"></div>
             <strong>
                 <p>Green Puffle</p>
             </strong>
             <p class="puffle-des">The green puffle is playful and cheerful. It loves jokes, music, and entertaining
                 others with its fun personality</p>
-        </articles>
+        </article>
     </section>
 
     <section class="backlink-container"><a class="portfoliolink" href="/portfolio/index.html">Come back to Portfolio</a>
