links problemas fix

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/portfolio/styles.css">
     <link rel="icon" href="">
     <title>Portfolio</title>
 </head>
@@ -15,7 +15,7 @@
         <h1>Ulith Giraldo Echavarría</h1>
         <nav class="portfolionav">
             <a class="navlink" href="#about">About</a>
-            <a class="navlink" href="#projects">Proyects</a>
+            <a class="navlink" href="#projects">Projects</a>
             <a class="navlink" href="#contact">Contact</a>
             <a class="navlink" href="/portfolio/pets.html">Pets Gallery</a>
         </nav>
@@ -55,5 +55,5 @@
         </form>
     </section>
 
-    <script src="script.js"></script>
+    <script src="/portfolio/script.js"></script>
 </body>
