--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -67,7 +67,7 @@
         </article>
     </section>
 
-    <section class="backlink-container"><a class="portfoliolink" href="/portfolio/index.html">Come back to Portfolio</a>
+    <section class="backlink-container"><a class="portfoliolink" href="../index.html">Come back to Portfolio</a>
     </section>
 
 </body>
