--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/portfolio/styles.css">
+    <link rel="stylesheet" href="portfolio/styles.css">
     <link rel="icon" href="">
     <title>Portfolio</title>
 </head>
@@ -17,7 +17,7 @@
             <a class="navlink" href="#about">About</a>
             <a class="navlink" href="#projects">Projects</a>
             <a class="navlink" href="#contact">Contact</a>
-            <a class="navlink" href="/portfolio/pets.html">Pets Gallery</a>
+            <a class="navlink" href="portfolio/pets.html">Pets Gallery</a>
         </nav>
     </header>
 
@@ -55,5 +55,5 @@
         </form>
     </section>
 
-    <script src="/portfolio/script.js"></script>
+    <script src="portfolio/script.js"></script>
 </body>
