--- a/portfolio/pets.html
+++ b/portfolio/pets.html
@@ -18,7 +18,7 @@
     <section class="gallery">
 
         <article class="img-text">
-            <div class="img-container" id="img1"><img src="/portfolio/pets/yellow.png" alt="Yellow Puffle"></div>
+            <div class="img-container" id="img1"><img src="pets/yellow.png" alt="Yellow Puffle"></div>
             <strong>
                 <p>Yellow Puffle</p>
             </strong>
@@ -26,7 +26,7 @@
                 others with its fun personality</p>
         </article>
         <article class="img-text">
-            <div class="img-container" id="img2"><img src="/portfolio/pets/blue.png" alt="Blue Puffle"></div>
+            <div class="img-container" id="img2"><img src="pets/blue.png" alt="Blue Puffle"></div>
             <strong>
                 <p>Blue Puffle</p>
             </strong>
@@ -34,7 +34,7 @@
                 others with its fun personality</p>
         </article>
         <article class="img-text">
-            <div class="img-container" id="img3"><img src="/portfolio/pets/dragon.png" alt="Red Puffle"></div>
+            <div class="img-container" id="img3"><img src="pets/dragon.png" alt="Red Puffle"></div>
             <strong>
                 <p>Dragon Puffle</p>
             </strong>
@@ -42,7 +42,7 @@
                 others with its fun personality</p>
         </article>
         <article class="img-text">
-            <div class="img-container" id="img4"><img src="/portfolio/pets/brown.png" alt="Blue Puffle"></div>
+            <div class="img-container" id="img4"><img src="pets/brown.png" alt="Blue Puffle"></div>
             <strong>
                 <p>Brown Puffle</p>
             </strong>
@@ -50,7 +50,7 @@
                 others with its fun personality</p>
         </article>
         <article class="img-text">
-            <div class="img-container" id="img5"><img src="/portfolio/pets/red.png" alt="Red Puffle"></div>
+            <div class="img-container" id="img5"><img src="pets/red.png" alt="Red Puffle"></div>
             <strong>
                 <p>Red Puffle</p>
             </strong>
@@ -58,7 +58,7 @@
                 others with its fun personality</p>
         </article>
         <article class="img-text">
-            <div class="img-container" id="img6"><img src="/portfolio/pets/green.png" alt="Green Puffle"></div>
+            <div class="img-container" id="img6"><img src="pets/green.png" alt="Green Puffle"></div>
             <strong>
                 <p>Green Puffle</p>
             </strong>
