--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <button id="text-btn" type="button">Text Change</button>
     </section>
 
-    <section id="proyjects">
+    <section id="projects">
         <h2>Proyects</h2>
         <ul class="projectslist">
             <li>Eco-Bikes</li>
